# src/main/kotlin/com/wutsi/ecommerce/shipping/dto/CreateShippingRequest.kt
@@ -7,5 +7,7 @@ public data class CreateShippingRequest(
     public val type: String = "",
     public val country: String = "",
     public val cityId: Long? = null,
-    public val message: String? = null
+    public val message: String? = null,
+    public val street: String? = null,
+    public val zipCode: String? = null
 )
