# src/main/kotlin/com/wutsi/ecommerce/shipping/dto/ShippingSummary.kt
@@ -15,5 +15,7 @@ public data class ShippingSummary(
     public val currency: String = "",
     public val deliveryTime: Int? = null,
     public val country: String? = null,
-    public val cityId: Long? = null
+    public val cityId: Long? = null,
+    public val street: String? = null,
+    public val zipCode: String? = null
 )
